--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,32 @@ services:
       - redis
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
+  celery-worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    env_file:
+      - backend/.env.example
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - db
+      - redis
+    command: ["celery", "-A", "config.celery", "worker", "-l", "info"]
+
+  celery-beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    env_file:
+      - backend/.env.example
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - db
+      - redis
+    command: ["celery", "-A", "config.celery", "beat", "-l", "info"]
+
   frontend:
     build:
       context: ./frontend
