--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install --upgrade pip \
 
 COPY . /app
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "config.asgi:application"]
