--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y build-essential default-libmysqlclient-dev \
+    && apt-get install -y build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements/ /tmp/requirements/
