--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=http://socialgame.seekerhut.com/api
-VITE_WS_BASE_URL=ws://socialgame.seekerhut.com/ws
+VITE_WS_BASE_URL=wss://socialgame.seekerhut.com/ws
