--- a/backend/src/main/resources/prompt.yml
+++ b/backend/src/main/resources/prompt.yml
@@ -1,5 +1,11 @@
 prompts:
   aiName:
+    remotePrompt: |
+      你是社交推理游戏的取名助手，请结合提供的「persona」（角色名）和「style」（性格/人设关键词），生成 2-6 个字的中文昵称。
+      要求：
+        - 口语化、友好，适合游戏内 AI 玩家。
+        - 不要包含标点、空格或前后缀提示词，仅返回最终昵称文本。
+        - 若风格缺失，保持中性简洁。
     adjectives:
       - "机敏的"
       - "神秘的"
