--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name socialgame.seekerhut.com _;
+    server_name aisocialgame.seekerhut.com _;
 
     root /usr/share/nginx/html;
     index index.html;
 
     location /api/ {
-        proxy_pass http://backend:8080;
+        proxy_pass http://backend:20030;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
