--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,31 @@ services:
     ports:
       - "11031:20030"
     environment:
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL:-jdbc:mysql://${MYSQL_HOST:-127.0.0.1}:${MYSQL_PORT:-3308}/${MYSQL_DB:-aisocialgame}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL:-jdbc:mysql://${MYSQL_HOST:-192.168.5.141}:${MYSQL_PORT:-3306}/${MYSQL_DB:-aisocialgame}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME:-aisocialgame}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD:-aisocialgame_pwd}
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_DATA_REDIS_HOST: ${SPRING_DATA_REDIS_HOST:-127.0.0.1}
-      SPRING_DATA_REDIS_PORT: ${SPRING_DATA_REDIS_PORT:-6381}
+      SPRING_DATA_REDIS_HOST: ${SPRING_DATA_REDIS_HOST:-192.168.5.141}
+      SPRING_DATA_REDIS_PORT: ${SPRING_DATA_REDIS_PORT:-6379}
       APP_REDIS_TOKEN_KEY_PREFIX: ${APP_REDIS_TOKEN_KEY_PREFIX:-aisocialgame:auth:token:}
       APP_AUTH_TOKEN_TTL_HOURS: 168
       APP_PROJECT_KEY: ${APP_PROJECT_KEY:-aisocialgame}
       APP_AI_SYSTEM_USER_ID: ${APP_AI_SYSTEM_USER_ID:-1}
       APP_ADMIN_USERNAME: ${APP_ADMIN_USERNAME:-admin}
       APP_ADMIN_PASSWORD: ${APP_ADMIN_PASSWORD:-admin123}
-      CONSUL_HTTP_ADDR: ${CONSUL_HTTP_ADDR:-http://127.0.0.1:8502}
+      CONSUL_HTTP_ADDR: ${CONSUL_HTTP_ADDR:-http://192.168.5.141:60000}
+      USER_GRPC_SERVICE_NAME: ${USER_GRPC_SERVICE_NAME:-aienie-userservice-grpc}
+      BILLING_GRPC_SERVICE_NAME: ${BILLING_GRPC_SERVICE_NAME:-aienie-payservice-grpc}
+      AI_GRPC_SERVICE_NAME: ${AI_GRPC_SERVICE_NAME:-aienie-aiservice-grpc}
       USER_GRPC_ADDR: ${USER_GRPC_ADDR:-consul:///aienie-userservice-grpc}
       BILLING_GRPC_ADDR: ${BILLING_GRPC_ADDR:-consul:///aienie-payservice-grpc}
       AI_GRPC_ADDR: ${AI_GRPC_ADDR:-consul:///aienie-aiservice-grpc}
       SSO_USER_SERVICE_NAME: ${SSO_USER_SERVICE_NAME:-aienie-userservice-http}
-      QDRANT_HOST: ${QDRANT_HOST:-http://127.0.0.1}
-      QDRANT_PORT: ${QDRANT_PORT:-6335}
+      SSO_USER_SERVICE_BASE_URL: ${SSO_USER_SERVICE_BASE_URL:-https://userservice.seekerhut.com}
+      QDRANT_HOST: ${QDRANT_HOST:-http://192.168.5.141}
+      QDRANT_PORT: ${QDRANT_PORT:-6333}
       QDRANT_ENABLED: ${QDRANT_ENABLED:-true}
-      SSO_CALLBACK_URL: ${SSO_CALLBACK_URL:-http://aisocialgame.seekerhut.com/sso/callback}
+      SSO_CALLBACK_URL: ${SSO_CALLBACK_URL:-https://aisocialgame.seekerhut.com/sso/callback}
       SSO_LOGIN_PATH: ${SSO_LOGIN_PATH:-/sso/login}
       SSO_REGISTER_PATH: ${SSO_REGISTER_PATH:-/register}
       SERVER_PORT: ${SERVER_PORT:-20030}
@@ -37,6 +41,10 @@ services:
       - ./backend/target/ai-social-game-0.0.1-SNAPSHOT.jar:/app/app.jar:ro
       - ./backend/src/main/resources/application.yml:/app/config/application.yml:ro
       - ./backend/src/main/resources/prompt.yml:/app/config/prompt.yml:ro
+    extra_hosts:
+      - "userservice.seekerhut.com:host-gateway"
+      - "payservice.seekerhut.com:host-gateway"
+      - "aiservice.seekerhut.com:host-gateway"
     networks:
       - aisocial
 
