feat(deploy): unify build scripts and add migration/e2e pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,11 @@ services:
       QDRANT_HOST: ${QDRANT_HOST:-http://192.168.5.141}
       QDRANT_PORT: ${QDRANT_PORT:-6333}
       QDRANT_ENABLED: ${QDRANT_ENABLED:-true}
+      APP_EXTERNAL_GRPC_AUTH_REQUIRED: ${APP_EXTERNAL_GRPC_AUTH_REQUIRED:-true}
+      APP_EXTERNAL_USERSERVICE_INTERNAL_GRPC_TOKEN: ${APP_EXTERNAL_USERSERVICE_INTERNAL_GRPC_TOKEN:-}
+      APP_EXTERNAL_PAYSERVICE_JWT: ${APP_EXTERNAL_PAYSERVICE_JWT:-}
+      APP_EXTERNAL_AISERVICE_HMAC_CALLER: ${APP_EXTERNAL_AISERVICE_HMAC_CALLER:-}
+      APP_EXTERNAL_AISERVICE_HMAC_SECRET: ${APP_EXTERNAL_AISERVICE_HMAC_SECRET:-}
       SSO_CALLBACK_URL: ${SSO_CALLBACK_URL:-https://aisocialgame.seekerhut.com/sso/callback}
       SSO_LOGIN_PATH: ${SSO_LOGIN_PATH:-/sso/login}
       SSO_REGISTER_PATH: ${SSO_REGISTER_PATH:-/register}
